fix scrollbar

--- a/app/assets/stylesheets/info-panel.css.scss
+++ b/app/assets/stylesheets/info-panel.css.scss
@@ -76,6 +76,7 @@
     width: 90%;
     height: 100%;
     top: 0;
+    overflow-y: auto;g
     background: #dbe2e9;
     z-index: 1;
     -webkit-transition-property: -webkit-transform;
