--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -7,8 +7,9 @@ Primary style
     box-sizing: border-box;
 }
 
+
 html {
-    font-size: 62.5%;
+
 }
 
 html * {
